--- a/section1.tex
+++ b/section1.tex
@@ -113,9 +113,13 @@ However, LAS remains insensitive to chronological ordering. While LAS performs l
 Video narratives permit multiple valid orderings and descriptive variations without compromising comprehension quality. Complex scenes with concurrent events and overlapping actions create legitimate alternatives in temporal presentation and detail granularity. Consider a video scene with multiple actors performing simultaneous actions—one description might detail Character A's actions first, then Character B's, while another equally valid description interleaves their actions or prioritizes different aspects. Similarly, some descriptions provide extensive detail while others focus on key events, both potentially representing accurate comprehension at different granularities. To accommodate this inherent narrative flexibility, VCS employs Local Narrative Tolerance (LNT) as a configurable tolerance parameter. LNT defines acceptable deviation from strict chronological ordering while maintaining narrative coherence, distinguishing legitimate narrative variations from chronological errors.
 
 \subsubsection{Distance-based NAS ($NAS_D$)}
-Building on the Best Matching Algorithm's correspondence sets $M_P$ and $M_R$, Distance-based NAS formalizes global chronological assessment by measuring how far each matched chunk deviates from its ideal narrative position. The core insight stems from Mapping Windows, which define where chunks should ideally align if narrative structure is preserved between reference and generated descriptions. $NAS_D$ operationalizes this concept by penalizing each chunk proportionally to its distance from the ideal region defined by the Mapping Windows, making it particularly sensitive to global chronological alignment violations like beginning-ending swaps. For precision evaluation, $NAS_D$ processes correspondence set $M_P$ against precision Mapping Windows $MW_p$; for recall evaluation, it uses correspondence set $M_R$ against recall Mapping Windows $MW_r$.
+Mapping Windows define where chunks should ideally match if narrative structure is preserved between reference and generated descriptions. $NAS_D$ formalizes this intuition by penalizing each chunk based on its distance from the ideal region defined by the Mapping Windows. For precision evaluation, $NAS_D$ uses correspondence set $M_P$ and precision Mapping Windows $MW_p$; for recall evaluation, it uses correspondence set $M_R$ and recall Mapping Windows $MW_r$.
 
-\textbf{LNT Implementation in Distance-Based Assessment}: As conceptually introduced above, LNT accommodates legitimate narrative flexibility by expanding each Mapping Window with penalty-free zones. In $NAS_D$, LNT increases tolerance by padding window boundaries: chunks matching within $\tau_{LNT} \cdot h_{LNT}$ distance from original window edges incur zero penalty, recognizing acceptable chronological variations. Crucially, when reference and generated lengths are perfectly divisible, LNT of 1 allows up to 2 neighboring chunks to swap positions without penalty, while LNT of 2 permits swaps with chunks up to 2 positions away (e.g., $C_1$ swapping with $C_3$). This mathematical relationship ensures that LNT provides both descriptive variability tolerance and controlled chronological flexibility.
+However, before computing penalties, VCS applies Local Narrative Tolerance (LNT) to account for natural narrative variations. LNT expands each Mapping Window with penalty-free zones, recognizing that chunks matching within these expanded regions represent acceptable chronological alignments. We first compute the LNT window height:
+\begin{equation}
+h_{LNT} = \left\lceil \frac{y}{x} \right\rceil - \mathbf{1}[y > x \land 0 < \frac{y}{x} - \left\lfloor \frac{y}{x} \right\rfloor \leq 0.5]
+\end{equation}
+where $y = N_{ref}$ and $x = N_{gen}$ for $NAS_{D,P}$, and the reverse for $NAS_{D,R}$. A user-defined multiplier $\tau_{LNT} \geq 0$ expands each Mapping Window by $\tau_{LNT} \cdot h_{LNT}$ rows. Chunks matching within this expanded window receive zero penalty.
 
 \paragraph{Local Narrative Tolerance (LNT)}
 We first compute the LNT window height:
@@ -152,7 +156,7 @@ NAS_D = \frac{2 \cdot NAS_{D,P} \cdot NAS_{D,R}}{NAS_{D,P} + NAS_{D,R}}
 \end{equation}
 
 \subsubsection{Line-based NAS ($NAS_L$)}
-While Mapping Windows constrain the search space and define the global position of each chunk in the narrative, their height essentially indicates how far apart neighboring chunks should be from each other to capture local narrative flow. $NAS_L$ formalizes this intuition by measuring how far apart two neighboring chunks are in the alignment path, and if they maintain expected distances, they contribute to the narrative line length, which is later compared with the ideal line to assess local narrative coherence.
+While Mapping Windows define global chunk positions, their height indicates expected distances between neighboring chunks. $NAS_L$ measures distances between consecutive chunks in the alignment path, comparing the resulting narrative line length against ideal bounds to assess local narrative coherence.
 
 \paragraph{Ideal narrative-line band}
 Because Mapping Windows allow flexibility in chunk alignment, multiple valid narrative line paths are possible through these windows. VCS calculates the theoretical shortest and longest feasible line lengths to establish bounds for valid narrative flow. Using the previously defined mapping windows $MW_p$ and $MW_r$, the ideal line band is computed as:
@@ -179,7 +183,7 @@ h_{mw} \tau_{LNT}, & \rho > 0.5
 \end{align}
 where $\rho = L_t/L_s - \lfloor L_t/L_s \rfloor$ represents the fractional part of the length ratio and $\tau_{LNT} \in \mathbb{N}_{\geq 0}$ is the user-controlled tolerance multiplier.
 
-This LNT mechanism enables controlled chronological flexibility: moderate jumps within the expanded tolerance $\omega_{LNT}$ contribute their full length to the narrative line, while jumps exceeding this threshold are clipped to prevent excessive penalties for acceptable reorderings. When reference and generated lengths are perfectly divisible, LNT of 1 allows neighboring chunks to swap positions without triggering clipping penalties, while LNT of 2 permits swaps with second-degree neighbors. Additionally, LNT accommodates descriptive variability by increasing expected distances between neighbors, allowing denser or sparser descriptions to maintain acceptable line lengths within the ideal band.
+Moderate jumps within the expanded tolerance $\omega_{LNT}$ contribute their full length to the narrative line, while jumps exceeding this threshold are clipped to the ideal floor slope. When reference and generated lengths are perfectly divisible, LNT of 1 allows neighboring chunks to swap without clipping penalties, while LNT of 2 permits swaps with second-degree neighbors.
 
 \paragraph{Actual narrative-line length}
 The actual narrative line is constructed by connecting aligned chunk positions and measuring the total path length. For consecutive alignment pairs $(x_i, y_i)$ and $(x_{i+1}, y_{i+1})$ sorted by source index, each segment contributes to the line length based on its vertical jump magnitude. The segment length $\ell_i$ is computed as the standard Euclidean distance $\sqrt{(x_{i+1} - x_i)^2 + (y_{i+1} - y_i)^2}$ when the vertical jump $|y_{i+1} - y_i|$ falls within the base tolerance $\omega_0$. For moderate jumps exceeding $\omega_0$ but within the expanded tolerance $\omega_{LNT}$, the vertical component is clipped to the ideal floor slope $|\Delta y_{x_i}^{\text{floor}}|$ to prevent excessive penalties for acceptable narrative reordering. Extreme jumps beyond $\omega_{LNT}$ contribute zero length, effectively penalizing severe chronological violations. The total actual line length is $L_{\text{act}} = \sum_i \ell_i$.
@@ -205,7 +209,7 @@ mirroring the fusion used for distance-based NAS.
 With this formulation, paths that remain within the ideal band score 1.0; drastic inversions collapse $\ell_i$ to zero, pushing $L_{\text{act}}$ below $L_{\min}$ and the score toward 0, while minor narrative reorderings are absorbed by $\tau_{LNT}$ to avoid undue penalties.
 
 \subsubsection{Content Alignment Through NAS}
-Beyond chronological assessment, both $NAS_D$ and $NAS_L$ inherently capture content completeness through their respective mechanisms. In Distance-based assessment, when chunks are missing from generated descriptions, remaining chunks in the precision evaluation slightly shift outside their expected mapping windows to align with available content, incurring distance penalties that reflect content gaps. Conversely, extra content in generated descriptions causes reference chunks in recall evaluation to map to suboptimal positions, again incurring penalties that signal content additions. In Line-based assessment, missing chunks cause the actual narrative line to become shorter than the ideal range as consecutive alignments skip intermediate positions, while extra content creates longer-than-expected lines as additional alignment points extend the path length. Both scenarios move $L_{\text{act}}$ outside the ideal band $[L_{\min}, L_{\max}]$, triggering proportional penalties. LNT accommodates this content alignment capability by padding mapping window boundaries and adjusting expected neighbor distances, allowing for legitimate descriptive variability while maintaining sensitivity to genuine content gaps and additions.
+Both $NAS_D$ and $NAS_L$ capture content completeness through their respective mechanisms. Missing chunks cause remaining chunks to shift outside expected mapping windows, incurring distance penalties in $NAS_D$, and create shorter narrative lines in $NAS_L$ as alignments skip intermediate positions. Extra content forces suboptimal chunk mappings in $NAS_D$ and extends narrative lines beyond expected lengths in $NAS_L$, moving $L_{\text{act}}$ outside the ideal band $[L_{\min}, L_{\max}]$. LNT accommodates legitimate descriptive variability while maintaining sensitivity to genuine content gaps.
 
 \subsubsection{Window-Regulariser and Final NAS}
 While Mapping Windows provide essential flexibility for robust evaluation, excessively permissive windows can completely undermine chronological assessment validity. This problem becomes acute when comparing descriptions of vastly different lengths, where mapping windows may become so large that they lose discriminative power.
