--- a/section1.tex
+++ b/section1.tex
@@ -110,7 +110,7 @@ LAS = \frac{2 \cdot LAS_P \cdot LAS_R}{LAS_P + LAS_R}
 However, LAS remains insensitive to chronological ordering. While LAS performs local semantic alignment and can detect content variations, descriptions with identical semantic content but completely reversed temporal order receive identical scores. To address this limitation, VCS introduces NAS that evaluates chronological consistency through narrative alignment assessment. NAS comprises four components: Distance-based NAS ($NAS_D$), Line-based NAS ($NAS_L$), a window regularizer, and the user-controlled Local Narrative Tolerance (LNT) parameter.
 
 \subsubsection{Defining Local Narrative Tolerance (LNT)}
-Video narratives permit multiple valid orderings and descriptive variations without compromising comprehension quality. Complex scenes with concurrent events and overlapping actions create legitimate alternatives in temporal presentation and detail granularity. Consider a video scene with multiple actors performing simultaneous actions—one description might detail Character A's actions first, then Character B's, while another equally valid description interleaves their actions or prioritizes different aspects. Similarly, some descriptions provide extensive detail while others focus on key events, both potentially representing accurate comprehension at different granularities. To accommodate this inherent narrative flexibility, VCS employs Local Narrative Tolerance (LNT) as a configurable tolerance parameter. LNT defines acceptable deviation from strict chronological ordering while maintaining narrative coherence, distinguishing legitimate narrative variations from chronological errors.
+Before assessing narrative alignment, VCS defines a user-controlled parameter called LNT. This concept stems from the observation that video narratives often permit multiple valid orderings and descriptive variations where temporally adjacent or concurrent events can be described in different sequences and detail levels without compromising narrative coherence. Complex video scenes frequently contain multiple actors and objects performing concurrent actions, where these details can be expressed in multiple valid orders and varying descriptive granularity—from highly detailed to moderate to sparse descriptions. To accommodate this inherent flexibility, VCS employs LNT as a tolerance parameter that defines acceptable deviation from strict chronological order and descriptive consistency, allowing higher LNT values to provide tolerance for both narrative reordering and descriptive variability when dense descriptions describe scenes with slightly different detail levels.
 
 \subsubsection{Distance-based NAS ($NAS_D$)}
 Mapping Windows define where chunks should ideally match if narrative structure is preserved between reference and generated descriptions. $NAS_D$ formalizes this intuition by penalizing each chunk based on its distance from the ideal region defined by the Mapping Windows. For precision evaluation, $NAS_D$ uses correspondence set $M_P$ and precision Mapping Windows $MW_p$; for recall evaluation, it uses correspondence set $M_R$ and recall Mapping Windows $MW_r$.
@@ -347,9 +347,9 @@ In chronological manipulation tasks, VCS demonstrates methodologically consisten
 Sequence inversion yields minimal scores (0.1\%/43.6\%), correctly identifying complete temporal reversal as severe corruption, while sequence rotation produces moderate scores (42.9\%/43.0\%), appropriately recognizing that content integrity is preserved despite chronological displacement. These results validate VCS's methodology: the Narrative Alignment Score (NAS) component specifically targets chronological consistency while the Semantic Alignment Score (SAS) maintains sensitivity to content preservation.
 
 \paragraph{Local Narrative Tolerance (LNT) Behavior Analysis}
-The LNT parameter demonstrates dual functionality: Local Chronology Tolerance (LCT) and Local Descriptive Tolerance. Comparing LNT$_0$ and LNT$_1$ configurations reveals systematic improvements across abstraction tasks (Low-Abstraction: +4.5\%, High-Abstraction: +6.3\%) and action processing (Action Decomposition: +1.9\%, Action Aggregation: +5.9\%), indicating enhanced tolerance for descriptive variability.
+The LNT parameter demonstrates dual functionality in chronological and descriptive tolerance. Comparing LNT$_0$ and LNT$_1$ configurations reveals systematic improvements across abstraction tasks (Low-Abstraction: +4.5\%, High-Abstraction: +6.3\%) and action processing (Action Decomposition: +1.9\%, Action Aggregation: +5.9\%), indicating enhanced tolerance for descriptive variability.
 
-Crucially, LNT$_1$ substantially improves performance in sequence permutation scenarios (Local Permutation: +75.4\%, Global Permutation: +11.8\%, Sequence Inversion: +43.5\%), demonstrating the LCT component's effectiveness in accommodating minor chronological deviations while maintaining discrimination against severe corruptions. This behavior validates the methodological design: higher LNT values provide appropriate tolerance for both narrative reordering and descriptive variability without compromising corruption detection capability.
+Crucially, LNT$_1$ substantially improves performance in sequence permutation scenarios (Local Permutation: +75.4\%, Global Permutation: +11.8\%, Sequence Inversion: +43.5\%), demonstrating effectiveness in accommodating minor chronological deviations while maintaining discrimination against severe corruptions. This behavior validates the methodological design: higher LNT values provide appropriate tolerance for both narrative reordering and descriptive variability without compromising corruption detection capability.
 
 \subsubsection{Cross-Author Consistency Results}
 
